static/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@200&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap');

:root {
    --bgcolor: rgb(70, 70, 84);
    --fonts: "JetBrains Mono", "monospace", "sans-serif";
}

footer {
    background-color: rgb(44, 41, 41)!important;
    text-align: center;
    color: rgb(196, 188, 188);
    font-size: 80%;
    font-family: var(--fonts);
}

.useful-link {
    color:rgb(115, 165, 212);
}

.useful-link:hover {
    color:rgb(115, 165, 212);
}

#content {
    display: flex;
    font-family: var(--fonts);
    width: 100%!important;
    height: 100vh;
    background-color: var(--bgcolor)!important;
    border: none !important;
    outline: none;
    padding-left: 10px;
    tab-size: 4px;
    white-space: pre-wrap;
    color: white;
    tab-size: 4;
}

#gh-link {
    color: rgb(93, 149, 202);
    text-decoration: none;
}

#gh-link:hover {
    text-decoration: underline;
}

#not-found {
    display: flex;
    position: absolute;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    color: rgb(233, 197, 197);
    text-align: center;
    background-color: var(--bgcolor);
    width: 100%!important;
    height: 100vh;
}

#mystery-image {
    -webkit-transition: -webkit-transform 0.3s;
    transition: -webkit-transform 0.3s;
    transition: transform 0.3s;
    transition: transform 0.3s, -webkit-transform 0.3s;
}

#mystery-image:hover {
    transform: scale(1.3);
}

#language-select {
    background-color: rgb(80, 80, 90);
    color: white;
    outline: none!important;
    border: none!important;
    font-family: "Source Sans Pro", "monospace", "sans-serif";
}

#nav-right-element {
    margin-right: 2vh!important;
}

#help-main-content {
    display: flex;
    width: 100%;
    min-height: 100vh;
    background-color: var(--bgcolor);
    justify-content: center;
}

#help-table {
    margin-top: 6vh;
    width: 70vw;
    color: rgb(226, 224, 247);
    border-color: rgb(167, 157, 157)!important;
}

#help-table th, td {
    border-color: rgb(170, 170, 194)!important;
}

